<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/primary_color"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:elevation="4dp"
        android:background="@drawable/appbar_background"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/back_arrow"
                android:clickable="true"
                android:focusable="true" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/search_field1"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"

                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/owner_name"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:background="@drawable/edittext_background"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/border_color"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:padding="8dp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/search_field2"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/repository_name"
                    android:inputType="text"
                    android:imeOptions="actionSearch"
                    android:background="@drawable/edittext_background"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/border_color"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:padding="8dp"
                    android:autofillHints="" />

            </LinearLayout>



        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/repoCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:visibility="gone"
        android:background="@drawable/card_bg"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/repoFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/repo_name"
            android:textSize="18sp"
            android:layout_weight="1"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/bookmarkIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:clickable="true"
            android:src="@drawable/bookmark_icon"
            android:contentDescription="@string/bookmarkicon"
            android:focusable="true" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:src="@drawable/share_icon"
            android:contentDescription="@string/share_icon"
            android:focusable="true" />


    </LinearLayout>


        <TextView
            android:id="@+id/repoDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/repo_description"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/star_icon"
                android:contentDescription="@string/star_icon" />

            <TextView
                android:id="@+id/repoStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:layout_marginStart="4dp" />

        </LinearLayout>




    </LinearLayout>

    <TextView
        android:id="@+id/repositoryNotFoundTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/repository_not_found"
        android:textColor="@color/border_color"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/otherErrorsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong_try_again"
        android:textColor="@color/border_color"
        android:textSize="18sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/button_color"
        android:visibility="gone"
        android:layout_centerInParent="true" />



</RelativeLayout>